@@ -13,9 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package cn.odboy.util;
 
+import cn.hutool.core.collection.CollUtil;
 import cn.odboy.base.KitSelectOptionVo;
 import com.alibaba.fastjson2.JSON;
 import java.lang.reflect.Field;
@@ -39,7 +39,7 @@ import lombok.experimental.UtilityClass;
  * @date 2022-11-09
  */
 @UtilityClass
-public final class KitCollUtil extends cn.hutool.core.collection.CollUtil {
+public final class KitCollUtil extends CollUtil {
 
   private static <T, K> Predicate<T> distinctPredicate(Function<? super T, ? extends K> keyMapper) {
     Map<Object, Boolean> map = new HashMap<>(3);
@@ -52,7 +52,7 @@ public final class KitCollUtil extends cn.hutool.core.collection.CollUtil {
    * 使用方式: list = CollUtil.streamDistinct(list, Object::getXXX)
    */
   public static <T, K> List<T> streamDistinct(List<T> data, Function<? super T, ? extends K> keyMapper) {
-    return data.stream().filter(distinctPredicate(keyMapper)).toList();
+    return data.stream().filter(distinctPredicate(keyMapper)).collect(Collectors.toList());
   }
 
   /**
@@ -68,7 +68,7 @@ public final class KitCollUtil extends cn.hutool.core.collection.CollUtil {
    */
   public static <T, U extends Comparable<? super U>> List<T> streamAscSort(List<T> data,
       Function<? super T, ? extends U> keyExtractor) {
-    return data.stream().sorted(Comparator.comparing(keyExtractor)).toList();
+    return data.stream().sorted(Comparator.comparing(keyExtractor)).collect(Collectors.toList());
   }
 
   /**
@@ -84,7 +84,7 @@ public final class KitCollUtil extends cn.hutool.core.collection.CollUtil {
    */
   public static <T, U extends Comparable<? super U>> List<T> streamDescSort(List<T> data,
       Function<? super T, ? extends U> keyExtractor) {
-    return data.stream().sorted(Comparator.comparing(keyExtractor).reversed()).toList();
+    return data.stream().sorted(Comparator.comparing(keyExtractor).reversed()).collect(Collectors.toList());
   }
 
   /**
@@ -193,6 +193,7 @@ public final class KitCollUtil extends cn.hutool.core.collection.CollUtil {
    * @return /
    */
   public static BigDecimal streamBigDecimalAvg(List<BigDecimal> data) {
+    KitValidUtil.notEmpty(data, "data");
     return data.stream().filter(Objects::nonNull).reduce(BigDecimal.ZERO, BigDecimal::add)
         .divide(BigDecimal.valueOf(data.size()), 6, RoundingMode.FLOOR);
   }
